objects/Loop__DDP_Text_Group__c.object
<CustomObject>
    <fields>
        <fullName>Loop__Advanced_Filter_Conditions__c</fullName>
        <label>Advanced Filter Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__DDP__c</fullName>
        <label>Document Package</label>
        <referenceTo>Loop__DDP__c</referenceTo>
        <relationshipLabel>Component Groups</relationshipLabel>
        <relationshipName>DDP_Text_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loop__Delete_Empty_Containers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Container If Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Field_Tag__c</fullName>
        <label>Original Component Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Filter__c</fullName>
        <label>Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Filters__c</fullName>
        <description>This field is shown in the Connected Components related list on the Document Package layout.</description>
        <formula>HYPERLINK(&quot;/apex/Loop__editDdpTextGroup?id=&quot;&amp; Id &amp;&quot;&amp;retURL=/apex/loop__ddpDetails?id=&quot;&amp; Loop__DDP__c , &quot;Edit&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Text_Group__c</fullName>
        <label>Component Group</label>
        <referenceTo>Loop__Text_Group__c</referenceTo>
        <relationshipLabel>DDPs</relationshipLabel>
        <relationshipName>DDP_Text_Groups</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Connected Component Group</label>
    <nameField>
        <displayFormat>DCG-{000000}</displayFormat>
        <label>Document Package Component Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connected Component Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>